2017-10-14  Robby Stephenson  <robby@periapsis.org>

	* Updated Goodreads importer to use https endpoint.

2017-10-13  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.1.

2017-09-20  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bugs with remote image loading (Bug 382572, Bug 379607, Bug 384104).

2017-09-10  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with showing stars in column view for float values (Bug 384547).
	* Fixed bug with comparing float values (Bug 384547).

2017-08-26  Robby Stephenson  <robby@periapsis.org>

	* Fixed building with CMake 3.9+ (Bug 382680).

2017-07-16  Robby Stephenson  <robby@periapsis.org>

	* Added data source for kino.de.

2017-07-07  Robby Stephenson  <robby@periapsis.org>

	* Added message dialog for Amazon Associate warning (Bug 364784).

2017-07-06  Robby Stephenson  <robby@periapsis.org>

	* Added DBUS option for filtering exported entries (Bug 382035).

2017-07-02  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug of running out of memory when writing very large XML files (Bug 380832).
	* Improved performance for filtering large collections by avoiding needless field value formatting.

2017-06-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with some icons not being shown (Bug 378477).

2017-05-29  Robby Stephenson  <robby@periapsis.org>

	* Switched from using libdiscid to libcdio, which includes cdtext.

2017-05-06  Robby Stephenson  <robby@periapsis.org>

	* Removed Freebase data source.

2017-05-01  Robby Stephenson  <robby@periapsis.org>

	* Fixed track length for CD audio (Bug 379426).

2017-04-30  Robby Stephenson  <robby@periapsis.org>

	* Added data source for IGDB.com.

2017-04-16  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug showing icons for custom collection (Bug 378852).

2017-04-09  Robby Stephenson  <robby@periapsis.org>

	* Added data source for https://opensource.dbc.dk.
	* Added PEGI rating to GiantBomb results (Bug 375996).
