@@ -151,7 +151,7 @@ add_executable(filtertest filtertest.cpp)
 ecm_mark_nongui_executable(filtertest)
 add_test(filtertest filtertest)
 ecm_mark_as_test(filtertest)
-TARGET_LINK_LIBRARIES(filtertest ${TELLICO_TEST_LIBS})
+TARGET_LINK_LIBRARIES(filtertest gui ${TELLICO_TEST_LIBS})
 
 add_executable(tellicomodeltest tellicomodeltest.cpp modeltest.cpp
   ../document.cpp
