@@ -1,3 +1,7 @@
+2017-11-01  Robby Stephenson  <robby@periapsis.org>
+
+	* Improved "Filter by Group" to use a regular expression (Bug 386011).
+
 2017-10-14  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated Goodreads importer to use https endpoint.
